step2/k3s-deploy/apps/app-deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels:
    app: app2
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:  
        app: app2
    spec:
      containers:
        - name: app2
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: vol-2
              mountPath: /usr/share/nginx/html
      volumes:
        - name: vol-2
          configMap:
            name: nginx-html-2

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service-2
spec:
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 80
