step2/k3s-deploy/apps/app-deploy-app2.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  labels:
    app: app1
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:  
        app: app1
    spec:
      containers:
        - name: app1
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: vol
              mountPath: /usr/share/nginx/html
      volumes:
        - name: vol
          configMap:
            name: nginx-html

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 80
      

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: traefik  # Use "traefik" on K3s
  rules:
    - host: app1.com  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
    - host: app2.com  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service-2
                port:
                  number: 80
    - host:
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service-2
                port:
                  number: 80
